[gd_scene load_steps=10 format=2]

[ext_resource path="res://interactables/www.gd" type="Script" id=1]
[ext_resource path="res://interactables/w_component_store.gd" type="Script" id=2]
[ext_resource path="res://interactables/web/revolico.png" type="Texture" id=3]
[ext_resource path="res://interactables/web/request_forum.gd" type="Script" id=4]
[ext_resource path="res://gui/themes/web_browser_theme.tres" type="Theme" id=5]
[ext_resource path="res://gui/filter_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://interactables/web/wBazaar.gd" type="Script" id=7]
[ext_resource path="res://interactables/web/filter_container.gd" type="Script" id=8]
[ext_resource path="res://gui/items_container.tscn" type="PackedScene" id=9]

[node name="web" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.870588, 0.882353, 0.901961, 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 5 )
tab_align = 0

[node name="ComponentStore" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="ref" type="TextureRect" parent="TabContainer/ComponentStore"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
texture = ExtResource( 3 )
expand = true

[node name="site" type="VBoxContainer" parent="TabContainer/ComponentStore"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="misc_header" type="HBoxContainer" parent="TabContainer/ComponentStore/site"]
margin_right = 1162.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="back" type="Button" parent="TabContainer/ComponentStore/site/misc_header"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = "<"

[node name="forward" type="Button" parent="TabContainer/ComponentStore/site/misc_header"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = ">"

[node name="misc_dir" type="LineEdit" parent="TabContainer/ComponentStore/site/misc_header"]
margin_left = 68.0
margin_right = 1060.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 5 )
editable = false
placeholder_text = "revolico.com/search?category-computers"

[node name="Button" type="Button" parent="TabContainer/ComponentStore/site/misc_header"]
margin_left = 1064.0
margin_right = 1094.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )

[node name="Button2" type="Button" parent="TabContainer/ComponentStore/site/misc_header"]
margin_left = 1098.0
margin_right = 1128.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )

[node name="Button3" type="Button" parent="TabContainer/ComponentStore/site/misc_header"]
margin_left = 1132.0
margin_right = 1162.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = "..."

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/ComponentStore/site"]
margin_top = 30.0
margin_right = 1162.0
margin_bottom = 569.0
size_flags_vertical = 3

[node name="body" type="VBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer"]
margin_right = 1162.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="website_title" type="Label" parent="TabContainer/ComponentStore/site/ScrollContainer/body"]
margin_right = 1162.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "NEWEGGS"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body"]
margin_top = 60.0
margin_right = 1162.0
margin_bottom = 90.0

[node name="dir" type="Label" parent="TabContainer/ComponentStore/site/ScrollContainer/body/HBoxContainer"]
margin_right = 1094.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Home > Components"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body/HBoxContainer"]
margin_left = 1098.0
margin_right = 1162.0
margin_bottom = 30.0

[node name="open_cart" type="Button" parent="TabContainer/ComponentStore/site/ScrollContainer/body/HBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 0 )
text = "Cart"

[node name="cart_size" type="Label" parent="TabContainer/ComponentStore/site/ScrollContainer/body/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 44.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 1
valign = 1

[node name="FilterContainer" type="HBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body"]
margin_top = 100.0
margin_right = 1162.0
margin_bottom = 121.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 8 )

[node name="all" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 226.0
margin_right = 256.0
margin_bottom = 21.0
rect_min_size = Vector2( 30, 0 )
text = "All"

[node name="case" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 276.0
margin_right = 326.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
text = "Case"

[node name="motherboard" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 346.0
margin_right = 446.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
text = "Motherboard"

[node name="cpu" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 466.0
margin_right = 556.0
margin_bottom = 21.0
rect_min_size = Vector2( 90, 0 )
text = "Processors"

[node name="memory" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 576.0
margin_right = 626.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
text = "RAM"

[node name="storage" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 646.0
margin_right = 716.0
margin_bottom = 21.0
rect_min_size = Vector2( 70, 0 )
text = "Storage"

[node name="psu" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 736.0
margin_right = 846.0
margin_bottom = 21.0
rect_min_size = Vector2( 110, 0 )
text = "Power Supply"

[node name="cooler" parent="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" instance=ExtResource( 6 )]
margin_left = 866.0
margin_right = 936.0
margin_bottom = 21.0
rect_min_size = Vector2( 70, 0 )
text = "Coolers"

[node name="search" type="Control" parent="TabContainer/ComponentStore/site/ScrollContainer/body"]
margin_top = 131.0
margin_right = 1162.0
margin_bottom = 231.0
rect_min_size = Vector2( 0, 100 )

[node name="bg" type="ColorRect" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.384314, 0.384314, 0.384314, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_constants/separation = 10
alignment = 1

[node name="search" type="HBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer"]
margin_top = 5.0
margin_right = 1122.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 30 )
alignment = 1

[node name="search_edit" type="LineEdit" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer/search"]
margin_left = 404.0
margin_right = 654.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 0 )
theme = ExtResource( 5 )

[node name="search_button" type="Button" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer/search"]
margin_left = 658.0
margin_right = 718.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
theme = ExtResource( 5 )
text = "search"

[node name="price" type="HBoxContainer" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer"]
margin_top = 45.0
margin_right = 1122.0
margin_bottom = 74.0
alignment = 1

[node name="price_label" type="Label" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer/price"]
margin_left = 479.0
margin_top = 5.0
margin_right = 518.0
margin_bottom = 24.0
theme = ExtResource( 5 )
text = "Price:"

[node name="price_min" type="LineEdit" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer/price"]
margin_left = 522.0
margin_right = 580.0
margin_bottom = 29.0
theme = ExtResource( 5 )
align = 1
placeholder_text = "min"

[node name="price_max" type="LineEdit" parent="TabContainer/ComponentStore/site/ScrollContainer/body/search/VBoxContainer/price"]
margin_left = 584.0
margin_right = 642.0
margin_bottom = 29.0
theme = ExtResource( 5 )
align = 1
placeholder_text = "max"

[node name="OnSale" parent="TabContainer/ComponentStore/site/ScrollContainer/body" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 241.0
margin_right = 1162.0
margin_bottom = 539.0

[node name="Cart" type="ConfirmationDialog" parent="TabContainer/ComponentStore"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -168.5
margin_right = 145.0
margin_bottom = 231.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 400 )
window_title = "Shopping Cart"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ComponentStore/Cart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -37.0

[node name="CartItems" parent="TabContainer/ComponentStore/Cart/VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 484.0
margin_bottom = 309.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ComponentStore/Cart/VBoxContainer"]
margin_top = 313.0
margin_right = 484.0
margin_bottom = 355.0

[node name="cost" type="Label" parent="TabContainer/ComponentStore/Cart/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 484.0
margin_bottom = 19.0
text = "Total Cost: $0.00"

[node name="remaining" type="Label" parent="TabContainer/ComponentStore/Cart/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 23.0
margin_right = 484.0
margin_bottom = 42.0
text = "Remaining Cash: $0.00"

[node name="wBazaar" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="site" type="VBoxContainer" parent="TabContainer/wBazaar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="misc_header" type="HBoxContainer" parent="TabContainer/wBazaar/site"]
margin_right = 1162.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="back" type="Button" parent="TabContainer/wBazaar/site/misc_header"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = "<"

[node name="forward" type="Button" parent="TabContainer/wBazaar/site/misc_header"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = ">"

[node name="misc_dir" type="LineEdit" parent="TabContainer/wBazaar/site/misc_header"]
margin_left = 68.0
margin_right = 1060.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 5 )
editable = false
placeholder_text = "https://www.reddit.com/r/computebazaar/"

[node name="Button" type="Button" parent="TabContainer/wBazaar/site/misc_header"]
margin_left = 1064.0
margin_right = 1094.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )

[node name="Button2" type="Button" parent="TabContainer/wBazaar/site/misc_header"]
margin_left = 1098.0
margin_right = 1128.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )

[node name="Button3" type="Button" parent="TabContainer/wBazaar/site/misc_header"]
margin_left = 1132.0
margin_right = 1162.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
theme = ExtResource( 5 )
text = "..."

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/wBazaar/site"]
margin_top = 34.0
margin_right = 1162.0
margin_bottom = 569.0
size_flags_vertical = 3

[node name="body" type="VBoxContainer" parent="TabContainer/wBazaar/site/ScrollContainer"]
margin_right = 1162.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="website_title" type="Label" parent="TabContainer/wBazaar/site/ScrollContainer/body"]
margin_right = 1162.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Computer Bazaar"
align = 1
valign = 1

[node name="create_post" type="Button" parent="TabContainer/wBazaar/site/ScrollContainer/body"]
margin_left = 531.0
margin_top = 90.0
margin_right = 631.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 6
text = "Create Post"

[node name="PostContainer" parent="TabContainer/wBazaar/site/ScrollContainer/body" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 1162.0
margin_bottom = 535.0

[node name="AcceptDialog" type="AcceptDialog" parent="TabContainer/wBazaar"]
unique_name_in_owner = true
margin_left = 292.0
margin_top = 175.0
margin_right = 717.0
margin_bottom = 504.0
window_title = "Create new post"

[node name="ItemContainer" parent="TabContainer/wBazaar/AcceptDialog" instance=ExtResource( 9 )]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -37.0

[node name="RequestForum" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="site" type="VBoxContainer" parent="TabContainer/RequestForum"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="misc_header" type="HBoxContainer" parent="TabContainer/RequestForum/site"]
margin_right = 996.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="back" type="Button" parent="TabContainer/RequestForum/site/misc_header"]
margin_right = 10.0
margin_bottom = 40.0
text = "<"

[node name="forward" type="Button" parent="TabContainer/RequestForum/site/misc_header"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 40.0
text = ">"

[node name="misc_dir" type="LineEdit" parent="TabContainer/RequestForum/site/misc_header"]
margin_left = 28.0
margin_right = 978.0
margin_bottom = 40.0
size_flags_horizontal = 3
editable = false
placeholder_text = "revolico.com/search?category-computers"

[node name="Button" type="Button" parent="TabContainer/RequestForum/site/misc_header"]
margin_left = 982.0
margin_right = 984.0
margin_bottom = 40.0

[node name="Button2" type="Button" parent="TabContainer/RequestForum/site/misc_header"]
margin_left = 988.0
margin_right = 990.0
margin_bottom = 40.0

[node name="Button3" type="Button" parent="TabContainer/RequestForum/site/misc_header"]
margin_left = 994.0
margin_right = 996.0
margin_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/RequestForum/site"]
margin_top = 44.0
margin_right = 996.0
margin_bottom = 539.0
size_flags_vertical = 3

[node name="body" type="VBoxContainer" parent="TabContainer/RequestForum/site/ScrollContainer"]
margin_right = 996.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="website_title" type="Label" parent="TabContainer/RequestForum/site/ScrollContainer/body"]
margin_right = 996.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
text = "SlackUnderflow"
align = 1
valign = 1

[node name="dir" type="Label" parent="TabContainer/RequestForum/site/ScrollContainer/body"]
margin_top = 90.0
margin_right = 996.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Home > PC Builds"
valign = 1

[node name="posts" type="VBoxContainer" parent="TabContainer/RequestForum/site/ScrollContainer/body"]
unique_name_in_owner = true
margin_top = 130.0
margin_right = 996.0
margin_bottom = 495.0
size_flags_vertical = 3

[node name="close" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -12.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 20.0
grow_horizontal = 0
rect_min_size = Vector2( 40, 0 )
text = "X"

[connection signal="pressed" from="TabContainer/ComponentStore/site/ScrollContainer/body/HBoxContainer/HBoxContainer/open_cart" to="TabContainer/ComponentStore" method="_on_open_cart_pressed"]
[connection signal="apply_filter" from="TabContainer/ComponentStore/site/ScrollContainer/body/FilterContainer" to="TabContainer/ComponentStore" method="_on_FilterContainer_apply_filter"]
[connection signal="confirmed" from="TabContainer/ComponentStore/Cart" to="TabContainer/ComponentStore" method="_on_Cart_confirmed"]
[connection signal="pressed" from="TabContainer/wBazaar/site/ScrollContainer/body/create_post" to="TabContainer/wBazaar" method="_on_create_post_pressed"]
[connection signal="confirmed" from="TabContainer/wBazaar/AcceptDialog" to="TabContainer/wBazaar" method="_on_AcceptDialog_confirmed"]
